# opengldemo

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  vcpkg.json
glsl/: frag.glsl  vertex.glsl
include/: application.hpp  cef.hpp  util.hpp  window.hpp
include/game/: mesh.hpp  object.hpp
include/gl/: camera.hpp  context.hpp  glbase.hpp  huige.hpp  huigl.hpp  image.hpp  mesh.hpp  node.hpp  pipeline.hpp  program.hpp  texture.hpp
include/lib/: stb_image.hpp  stb_image_implementation.hpp
include/win/: application.hpp  window.hpp
src/: CMakeLists.txt  application.cpp  main.cpp  util.cpp  window.cpp
src/game/: mesh.cpp
src/gl/: context.cpp  glbase.cpp  huige.cpp  huigl.cpp  image.cpp  mesh.cpp  pipeline.cpp  program.cpp  texture.cpp
src/win/: application.cpp  window.cpp
